# clins

./: CMakeLists.txt  README.md  package.xml  readme.md
config/: kaist.yaml  lio-sam-bag.yaml  liom-bag.yaml  yq-data.yaml
include/basalt/spline/: ceres_local_param.hpp  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_segment.h
include/basalt/utils/: eigen_utils.hpp  sophus_utils.hpp
include/factor/auto_diff/: imu_factor.h  lidar_feature_factor.h  loop_closure_factor.h  motion_factor.h  vicon_factor.h
include/feature/: feature_extraction.h  lidar_feature.h  voxel_filter.h
include/odometry/: imu_state_estimator.h  inertial_initializer.h  lidar_odometry.hpp  odom_visualizer.hpp  odometry_helper.hpp
include/sensor_data/: calibration.hpp  imu_data.h  lidar_data.h  loop_closure_data.h
include/trajectory/: se3_trajectory.hpp  trajectory_estimator.hpp  trajectory_manager.hpp  trajectory_viewer.hpp
include/utils/: ceres_callbacks.h  eigen_utils.hpp  gps_convert_utils.h  math_utils.h  tic_toc.h  vlp_common.h
launch/: clins_offline.launch  kaist_sick_map_generation.launch  odom.rviz
msg/: feature_cloud.msg  imu_array.msg  pose_array.msg
src/feature/: feature_extraction.cpp  feature_extraction_node.cpp
src/node/: clins_offline_node.cpp  kaist_sick_map_generation.cpp  recovery_vlp16_timestamp.cpp
src/odometry/: imu_state_estimator.cpp  inertial_initializer.cpp
